flux/manifests/03-services/authentik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
